--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,9 @@ dependencies = [
     "httpx (>=0.28.1,<0.29.0)",
     "pydantic (>=2.12.4,<3.0.0)",
     "anthropic (>=0.75.0,<0.76.0)",
-    "pytest (>=9.0.1,<10.0.0)"
+    "pytest (>=9.0.1,<10.0.0)",
+    "openai (>=2.8.1,<3.0.0)",
+    "pydantic-settings (>=2.12.0,<3.0.0)"
     
 ]
 
