--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ dependencies = [
     "langchain (>=1.1.0,<2.0.0)",
     "fastapi[standard] (>=0.122.0,<0.123.0)",
     "langchain-openai (>=1.1.0,<2.0.0)",
-    "langchain-text-splitters (>=1.0.0,<2.0.0)"
+    "langchain-text-splitters (>=1.0.0,<2.0.0)",
+    "apscheduler (>=3.11.1,<4.0.0)"
 ]
 
 
